--- a/appChallenge/ObjectiveList/ViewController/ObjectiveListView.xib
+++ b/appChallenge/ObjectiveList/ViewController/ObjectiveListView.xib
@@ -12,23 +12,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vb7-Uh-3UN">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                </tableView>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="vb7-Uh-3UN" secondAttribute="bottom" id="0mA-L0-DBm"/>
-                <constraint firstItem="vb7-Uh-3UN" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="6Fk-VO-x0l"/>
-                <constraint firstItem="vb7-Uh-3UN" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="IXc-mG-4ES"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="vb7-Uh-3UN" secondAttribute="trailing" id="zyx-fW-RUt"/>
-            </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-        </view>
+        <viewController id="vYl-R2-PoK" customClass="ObjectiveListViewController" customModule="appChallenge" customModuleProvider="target">
+            <view key="view" contentMode="scaleToFill" id="JCO-r2-xJZ">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <subviews>
+                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B01-D4-sdz">
+                        <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <connections>
+                            <outlet property="dataSource" destination="vYl-R2-PoK" id="oF8-75-Esp"/>
+                            <outlet property="delegate" destination="vYl-R2-PoK" id="Njg-Dw-B7e"/>
+                        </connections>
+                    </tableView>
+                </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <constraints>
+                    <constraint firstItem="6XC-er-I0P" firstAttribute="bottom" secondItem="B01-D4-sdz" secondAttribute="bottom" id="M9g-Bi-jBz"/>
+                    <constraint firstItem="B01-D4-sdz" firstAttribute="top" secondItem="6XC-er-I0P" secondAttribute="top" id="Tl4-mu-QGN"/>
+                    <constraint firstItem="6XC-er-I0P" firstAttribute="trailing" secondItem="B01-D4-sdz" secondAttribute="trailing" id="VOf-Zc-NcJ"/>
+                    <constraint firstItem="B01-D4-sdz" firstAttribute="leading" secondItem="6XC-er-I0P" secondAttribute="leading" id="mOQ-33-wwj"/>
+                </constraints>
+                <viewLayoutGuide key="safeArea" id="6XC-er-I0P"/>
+            </view>
+            <connections>
+                <outlet property="table" destination="B01-D4-sdz" id="A1X-dA-AL2"/>
+            </connections>
+            <point key="canvasLocation" x="51" y="24"/>
+        </viewController>
     </objects>
 </document>
