--- a/appChallenge/ObjectiveList/ViewController/ObjectiveListView.xib
+++ b/appChallenge/ObjectiveList/ViewController/ObjectiveListView.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <viewController id="vYl-R2-PoK" customClass="ObjectiveListViewController" customModule="appChallenge" customModuleProvider="target">
+        <viewController nibName="ObjectiveListView" id="vYl-R2-PoK" customClass="ObjectiveListViewController" customModule="appChallenge" customModuleProvider="target">
             <view key="view" contentMode="scaleToFill" id="JCO-r2-xJZ">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
