--- a/appChallenge/ObjectiveList/ViewController/Cell/ObjectiveListCell.xib
+++ b/appChallenge/ObjectiveList/ViewController/Cell/ObjectiveListCell.xib
@@ -18,11 +18,11 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bronzeMedal" translatesAutoresizingMaskIntoConstraints="NO" id="rlX-Zf-PLK">
-                        <rect key="frame" x="15" y="25" width="50" height="50"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bronzeMedal" translatesAutoresizingMaskIntoConstraints="NO" id="rlX-Zf-PLK">
+                        <rect key="frame" x="5" y="20" width="60" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="JSp-qh-P2e"/>
-                            <constraint firstAttribute="height" constant="50" id="wqs-xl-bsW"/>
+                            <constraint firstAttribute="width" constant="60" id="JSp-qh-P2e"/>
+                            <constraint firstAttribute="height" constant="60" id="wqs-xl-bsW"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Este es el título" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="toy-Lo-01b">
@@ -31,9 +31,9 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Esta es una descripción muy larga de meustra a ver que pasa" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhq-xf-sZW">
-                        <rect key="frame" x="75" y="51" width="220" height="36"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Esta es una descripción muy larga de meustra a ver que pasa rewfodjsaf fdsafojid" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhq-xf-sZW">
+                        <rect key="frame" x="75" y="44" width="220" height="43"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.52964758869999995" green="0.52963173389999996" blue="0.52964073420000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -48,8 +48,8 @@
                 <constraints>
                     <constraint firstItem="ljl-3r-6bf" firstAttribute="leading" secondItem="dhq-xf-sZW" secondAttribute="trailing" constant="10" id="9vg-Nm-1lB"/>
                     <constraint firstItem="dhq-xf-sZW" firstAttribute="leading" secondItem="rlX-Zf-PLK" secondAttribute="trailing" constant="10" id="A8N-NH-Cpt"/>
-                    <constraint firstItem="rlX-Zf-PLK" firstAttribute="leading" secondItem="1lJ-er-flK" secondAttribute="leading" constant="15" id="Fg5-ym-Mm3"/>
-                    <constraint firstItem="dhq-xf-sZW" firstAttribute="top" secondItem="toy-Lo-01b" secondAttribute="bottom" constant="10" id="LXM-gh-85Q"/>
+                    <constraint firstItem="rlX-Zf-PLK" firstAttribute="leading" secondItem="1lJ-er-flK" secondAttribute="leading" constant="5" id="Fg5-ym-Mm3"/>
+                    <constraint firstItem="dhq-xf-sZW" firstAttribute="top" secondItem="toy-Lo-01b" secondAttribute="bottom" constant="3" id="LXM-gh-85Q"/>
                     <constraint firstItem="rlX-Zf-PLK" firstAttribute="centerY" secondItem="1lJ-er-flK" secondAttribute="centerY" id="Lvx-PA-mnQ"/>
                     <constraint firstItem="ljl-3r-6bf" firstAttribute="centerY" secondItem="1lJ-er-flK" secondAttribute="centerY" id="Xlj-Tk-Xhv"/>
                     <constraint firstItem="ljl-3r-6bf" firstAttribute="leading" secondItem="toy-Lo-01b" secondAttribute="trailing" constant="10" id="amL-Lu-fgy"/>
